--- a/templates/recent_activities/activities.html
+++ b/templates/recent_activities/activities.html
@@ -20,7 +20,7 @@
                             <div class="body">
                                 <h5 class="card-title">{{ activity.title }}</h5>
                                 <p class="card-text justify">{{ activity.description }}</p>
-                                <a href="{{ activity.id }}" class="btn btn-blue">Read More</a>
+                                <a href="{{ activity.id }}" class="btn btn-light-blue">Read More</a>
                             </div>
                         </div>
                     </div>
