--- a/templates/elements/posts.html
+++ b/templates/elements/posts.html
@@ -20,7 +20,7 @@
                             <div class="body">
                                 <h5 class="card-title">{{ post.title }}</h5>
                                 <p class="card-text justify">{{ post.description }}</p>
-                                <a href="{{ post.id }}" class="btn btn-blue">Read More</a>
+                                <a href="{{ post.id }}" class="btn btn-orange">Read More</a>
                             </div>
                         </div>
                     </div>
