--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -3,8 +3,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<!-- Works -->
-<section id="works" class="py-5">
+<!-- Exhibitions -->
+<section id="exhibitions" class="py-5">
     <div class="container">
         <!-- <div class="row text-center">
             <div class="col-md-12">
