--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
     <script src="{% static 'js/picturefill.min.js'%}"></script>
     <script src="{% static 'js/lightgallery-all.min.js'%}"></script>
     <script src="{% static 'js/jquery.mousewheel.min.js'%}"></script>
-    <script src="{% static 'js/main.js'%}"></script>
+    <!-- <script src="{% static 'js/main.js'%}"></script> -->
     <script src="{% static 'js/script.js'%}"></script>
     <script>
       $(document).ready(function() {
