--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -1,41 +1,51 @@
-    
 <!DOCTYPE html>
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <section id="testimonials" class="py-5">
-    <div class="container">
-        <!-- <div class="row text-center">
+  <div class="container">
+    <!-- <div class="row text-center">
             <div class="col-md-12">
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-        {% if testimonials %}
-            <div class="container-exh">
-                <nav class="nav-exh">
-                    <ul class="ul-exh">
-                    <li class="li-exh">
-                        {% for testimonial in testimonials %}
-                        <div class="row">
-                            <div class="col-10 test-border">
-                                    {% if testimonial.is_published %}
-                                    <a class="text-center" href="#"><span></span><b class="test-title">{{testimonial.name}} - {{testimonial.title}}</b><br/>  <p>{{testimonial.testimonial}}</p></a>
-                                    <img src="{{testimonial.photo_main.url}}" alt="" class="img-test">
-                                {% endif %}
-                            </div>
-                        </div>
-                        {% endfor %}
-                    </li>
-                    </ul>
-                </nav>
-            </div>
-         {% else %}
-            <div class="row text-center">
-                <div class="col-md-12">
-                    <p>No Exhibitions Available</p>
+    {% if testimonials %}
+    <div class="container-exh">
+      <nav class="nav-exh">
+        <ul class="ul-exh">
+          <li class="li-exh">
+            {% for testimonial in testimonials %}
+            <div class="col-4-md mb-5">
+              <div class="square-container">
+                <div class="square">
+                  <div class="front">
+                    <img
+                      class="work-img"
+                      src="{{ testimonial.photo_main.url }}"
+                    />
+                  </div>
+                  <div class="back">
+                    <p class="p-3">
+                      <span class="work-title"
+                        >{{ testimonial.name }}-{{ testimonial.title }}</span
+                      ><br />
+                      {{ testimonial.description }}
+                    </p>
+                  </div>
                 </div>
+              </div>
             </div>
-        {% endif %}
+            {% endfor %}
+          </li>
+        </ul>
+      </nav>
     </div>
+    {% else %}
+    <div class="row text-center">
+      <div class="col-md-12">
+        <p>No Exhibitions Available</p>
+      </div>
+    </div>
+    {% endif %}
+  </div>
 </section>
 
 {% endblock %}
