--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -1,42 +1,39 @@
-    
 <!DOCTYPE html>
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 <!-- Exhibitions -->
 <section id="exhibitions" class="py-5">
-    <div class="container">
-        <!-- <div class="row text-center">
+  <div class="container">
+    <!-- <div class="row text-center">
             <div class="col-md-12">
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-        {% if exhibitions %}
-            <div class="container-exh">
-                <nav class="nav-exh">
-                    <ul class="ul-exh">
-                    <li class="li-exh">
-                        {% for exhibition in exhibitions %}
-                        <div class="row">
-                            <div class="col-7 exh-line">
-                                    {% if exhibition.is_published %}
-                                    <a href="#"><span></span>{{exhibition.date | date:"Y"}} - {{exhibition.title}}</a>
-                                    <img src="{{exhibition.photo_main.url}}" alt="" class="">
-                                {% endif %}
-                            </div>
-                        </div>
-                        {% endfor %}
-                    </li>
-                    </ul>
-                </nav>
+    {% if exhibitions %} {% for exhibition in exhibitions %}
+    <div class="row">
+      <div class="col-4-md mb-5">
+        <div class="square-container">
+          <div class="square">
+            <div class="front">
+              <p class="p-3">
+                <span class="work-title">{{ exhibition.date }}</span
+                ><br />
+                {{ exhibition.title }}
+              </p>
             </div>
-         {% else %}
-            <div class="row text-center">
-                <div class="col-md-12">
-                    <p>No Exhibitions Available</p>
-                </div>
+            <div class="back">
+              <img class="work-img" src="{{ exhibition.photo_main.url }}" />
             </div>
-        {% endif %}
+          </div>
+        </div>
+      </div>
     </div>
+    {% endfor %} {% else %}
+    <div class="row text-center">
+      <div class="col-md-12">
+        <p>No Exhibitions Available</p>
+      </div>
+    </div>
+    {% endif %}
+  </div>
 </section>
 {% endblock %}
