--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -7,41 +7,28 @@
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-    {% if testimonials %}
-    <div class="container-exh">
-      <nav class="nav-exh">
-        <ul class="ul-exh">
-          <li class="li-exh">
-            {% for testimonial in testimonials %}
-            <div class="col-4-md mb-5">
-              <div class="square-container">
-                <div class="square">
-                  <div class="front">
-                    <img
-                      class="work-img"
-                      src="{{ testimonial.photo_main.url }}"
-                    />
-                  </div>
-                  <div class="back">
-                    <p class="p-3">
-                      <span class="work-title"
-                        >{{ testimonial.name }}-{{ testimonial.title }}</span
-                      ><br />
-                      {{ testimonial.description }}
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            {% endfor %}
-          </li>
-        </ul>
-      </nav>
+    {% if testimonials %} {% for testimonial in testimonials %}
+    <div class="col-4-md mb-5">
+      <div class="square-container">
+        <div class="square">
+          <div class="front">
+            <img class="work-img" src="{{ testimonial.photo_main.url }}" />
+          </div>
+          <div class="back">
+            <p class="p-3">
+              <span class="work-title"
+                >{{ testimonial.name }}-{{ testimonial.title }}</span
+              ><br />
+              {{ testimonial.description }}
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-    {% else %}
+    {% endfor %} {% else %}
     <div class="row text-center">
       <div class="col-md-12">
-        <p>No Exhibitions Available</p>
+        <p>No Testimonials Available</p>
       </div>
     </div>
     {% endif %}
