--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -8,26 +8,28 @@
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-    {% if exhibitions %} {% for exhibition in exhibitions %}
     <div class="row">
-      <div class="col-4-md mb-5">
-        <div class="square-container">
-          <div class="square">
-            <div class="front">
-              <p class="p-3">
-                <span class="work-title">{{ exhibition.date }}</span
-                ><br />
-                {{ exhibition.title }}
-              </p>
-            </div>
-            <div class="back">
-              <img class="work-img" src="{{ exhibition.photo_main.url }}" />
+      {% if exhibitions %} {% for exhibition in exhibitions %}
+      <div class="row">
+        <div class="col-4-md mb-5">
+          <div class="square-container">
+            <div class="square">
+              <div class="front">
+                <p class="p-3">
+                  <span class="work-title">{{ exhibition.date }}</span
+                  ><br />
+                  {{ exhibition.title }}
+                </p>
+              </div>
+              <div class="back">
+                <img class="work-img" src="{{ exhibition.photo_main.url }}" />
+              </div>
             </div>
           </div>
         </div>
       </div>
+      {% endfor %} {% else %}
     </div>
-    {% endfor %} {% else %}
     <div class="row text-center">
       <div class="col-md-12">
         <p>No Exhibitions Available</p>
