--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -7,25 +7,27 @@
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-    {% if testimonials %} {% for testimonial in testimonials %}
-    <div class="col-4-md mb-5">
-      <div class="square-container">
-        <div class="square">
-          <div class="front">
-            <img class="work-img" src="{{ testimonial.photo_main.url }}" />
-          </div>
-          <div class="back">
-            <p class="p-3">
-              <span class="work-title"
-                >{{ testimonial.name }}-{{ testimonial.title }}</span
-              ><br />
-              {{ testimonial.description }}
-            </p>
+    <div class="row">
+      {% if testimonials %} {% for testimonial in testimonials %}
+      <div class="col-4-md mb-5">
+        <div class="square-container">
+          <div class="square">
+            <div class="front">
+              <img class="work-img" src="{{ testimonial.photo_main.url }}" />
+            </div>
+            <div class="back">
+              <p class="p-3">
+                <span class="work-title"
+                  >{{ testimonial.name }}-{{ testimonial.title }}</span
+                ><br />
+                {{ testimonial.description }}
+              </p>
+            </div>
           </div>
         </div>
       </div>
+      {% endfor %} {% else %}
     </div>
-    {% endfor %} {% else %}
     <div class="row text-center">
       <div class="col-md-12">
         <p>No Testimonials Available</p>
