--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -35,7 +35,7 @@
         <img src="{{ work.photo_main.url }}" alt="" class="mb-3 img-fluid" />
       </div>
     </div>
-    {% endfor %} {% else %}
+    {% endif %} {% endif %} {% endfor %} {% else %}
     <div class="row text-center">
       <div class="col-md-12">
         <p>No Works Available</p>
