--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -39,7 +39,7 @@ a:hover {
   -o-transition: 0.3s all ease-in-out;
   transition: 0.3s all ease-in-out;
   background: rgba(0, 0, 0, 0.6);
-  content: "";
+  content: '';
   position: absolute;
   z-index: 2000;
   top: 0;
@@ -127,7 +127,7 @@ a:hover {
   }
 }
 .site-section-heading:after {
-  content: "";
+  content: '';
   left: 0%;
   bottom: 0;
   position: absolute;
@@ -136,11 +136,11 @@ a:hover {
   background: #000;
 }
 .site-section-heading.text-center:after {
-  content: "";
+  content: '';
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
-  content: "";
+  content: '';
   left: 50%;
   bottom: 0;
   position: absolute;
@@ -340,14 +340,14 @@ a:hover {
 }
 .site-navbar .site-navigation .site-menu .has-children > a:before {
   position: absolute;
-  content: "\e313";
+  content: '\e313';
   font-size: 16px;
   top: 50%;
   right: 0;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  font-family: "icomoon";
+  font-family: 'icomoon';
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown {
   visibility: hidden;
@@ -380,7 +380,7 @@ a:hover {
   bottom: 100%;
   left: 20%;
   border: solid transparent;
-  content: " ";
+  content: ' ';
   height: 0;
   width: 0;
   position: absolute;
@@ -435,7 +435,7 @@ a:hover {
   .dropdown
   > li.has-children
   > a:before {
-  content: "\e315";
+  content: '\e315';
   right: 20px;
 }
 .site-navbar
@@ -503,10 +503,10 @@ a:hover {
   opacity: 1;
 }
 
-.site-menu[data-class="social"] a {
+.site-menu[data-class='social'] a {
   color: #000;
 }
-.site-menu[data-class="social"] a:hover {
+.site-menu[data-class='social'] a:hover {
   color: blue;
 }
 
@@ -618,8 +618,8 @@ a:hover {
 .site-mobile-menu .site-nav-wrap .arrow-collapse:before {
   font-size: 12px;
   z-index: 20;
-  font-family: "icomoon";
-  content: "\f078";
+  font-family: 'icomoon';
+  content: '\f078';
   position: absolute;
   top: 50%;
   left: 50%;
@@ -668,16 +668,16 @@ a:hover {
   font-size: 16px;
   padding-left: 60px;
 }
-.site-mobile-menu .site-nav-wrap[data-class="social"] {
+.site-mobile-menu .site-nav-wrap[data-class='social'] {
   float: left;
   width: 100%;
   margin-top: 30px;
   padding-bottom: 5em;
 }
-.site-mobile-menu .site-nav-wrap[data-class="social"] > li {
+.site-mobile-menu .site-nav-wrap[data-class='social'] > li {
   width: auto;
 }
-.site-mobile-menu .site-nav-wrap[data-class="social"] > li:first-child a {
+.site-mobile-menu .site-nav-wrap[data-class='social'] > li:first-child a {
   padding-left: 15px !important;
 }
 
@@ -693,7 +693,7 @@ a:hover {
 }
 .site-blocks-cover.overlay:before {
   position: absolute;
-  content: "";
+  content: '';
   left: 0;
   bottom: 0;
   right: 0;
@@ -806,7 +806,7 @@ a:hover {
 }
 .team-member:before {
   position: absolute;
-  content: "";
+  content: '';
   top: 0;
   left: 0;
   right: 0;
@@ -942,7 +942,7 @@ a:hover {
   transition: 0.3s all ease-in-out;
 }
 .feature-blocks-1 .feature-block-1:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   z-index: 1;
@@ -1206,7 +1206,7 @@ a:hover {
   position: relative;
 }
 .block-12 figure:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   right: 0;
@@ -1292,7 +1292,7 @@ a:hover {
 }
 .block-12 .text .text-inner:before {
   position: absolute;
-  content: "";
+  content: '';
   width: 80px;
   height: 4px;
   margin-top: -4px;
@@ -1490,7 +1490,7 @@ a:hover {
 }
 .swiper-container .swiper-slide .image-wrap:before {
   position: absolute;
-  content: "";
+  content: '';
   left: 0;
   right: 0;
   bottom: 0;
@@ -1549,8 +1549,8 @@ a:hover {
 .swiper-container-rtl .swiper-button-next:before {
   background: blue;
   padding: 8px;
-  content: "\e5c4";
-  font-family: "icomoon";
+  content: '\e5c4';
+  font-family: 'icomoon';
   font-size: 20px;
   color: #fff;
   border-radius: 50%;
@@ -1570,15 +1570,19 @@ a:hover {
 .swiper-container-rtl .swiper-button-prev:before {
   background: blue;
   padding: 8px;
-  content: "\e5c8";
-  font-family: "icomoon";
+  content: '\e5c8';
+  font-family: 'icomoon';
   font-size: 20px;
   color: #fff;
   border-radius: 50%;
 }
 
-.swiper-button-next:focus { outline: none; }
-.swiper-button-prev:focus { outline: none; }
+.swiper-button-next:focus {
+  outline: none;
+}
+.swiper-button-prev:focus {
+  outline: none;
+}
 
 .swiper-pagination-bullet-active {
   opacity: 1;
@@ -1657,88 +1661,108 @@ a:hover {
 }
 
 .active1 a {
-  color: #00782A !important;
+  color: #00782a !important;
 }
 
 .active2 a {
-  color: 	#FFD300 !important;
+  color: #ffd300 !important;
 }
 
 .active3 a {
-  color:	#E32017 !important;
+  color: #e32017 !important;
 }
 
 .active4 a {
-  color:	#0098D4 !important;
+  color: #0098d4 !important;
 }
 
 .active5 a {
-  color: #EE7C0E !important;
+  color: #ee7c0e !important;
 }
 
 .active6 a {
-  color: 	#A0A5A9 !important;
+  color: #a0a5a9 !important;
 }
 
 .active7 a {
-  color: 	#F3A9BB !important;
+  color: #f3a9bb !important;
 }
 
 .active8 a {
-  color: 	#660066 !important;
+  color: #660066 !important;
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*Header Carousel*/
 
 .tech-slideshow {
-  height: 28rem;  
-  max-width: 2000px;  
+  height: 28rem;
+  max-width: 2000px;
   margin: 0 auto;
-  position: relative;  
-  overflow: hidden;  
+  position: relative;
+  overflow: hidden;
   transform: translate3d(0, 0, 0);
   border: 0.5rem solid #dfedfc;
 }
 .tech-slideshow > div {
-  height: 28rem;  
-  width: 8000px;  
+  height: 28rem;
+  width: 8000px;
   transform: translate3d(0, 0, 0);
   background: url(../images/panoramic.png);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  position: absolute;  
-  top: 0;  
-  left: 0;  
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
 }
 .tech-slideshow .mover-1 {
@@ -1746,8 +1770,8 @@ a:hover {
   -webkit-animation: moveSlideshow 30s linear infinite;
 }
 @keyframes moveSlideshow {
-  100% { 
-    transform: translateX(-66.6666%);  
+  100% {
+    transform: translateX(-66.6666%);
   }
 }
 
@@ -1763,10 +1787,14 @@ a:hover {
 
 .pic {
   -webkit-animation: fadein 2s;
-  /*Safari,ChromeandOpera>12.1*/-moz-animation: fadein 10s;
-  /*Firefox<16*/-ms-animation: fadein 10s;
-  /*InternetExplorer*/-o-animation: fadein 10s;
-  /*Opera<12.1*/animation: fadein 10s;
+  /*Safari,ChromeandOpera>12.1*/
+  -moz-animation: fadein 10s;
+  /*Firefox<16*/
+  -ms-animation: fadein 10s;
+  /*InternetExplorer*/
+  -o-animation: fadein 10s;
+  /*Opera<12.1*/
+  animation: fadein 10s;
   position: absolute;
   top: 4.5rem;
   left: 50%;
@@ -1781,7 +1809,7 @@ a:hover {
   -o-transform: translate(-50%, 0) rotate(-1deg);
 }
 
-.pic2{
+.pic2 {
   display: none;
 }
 
@@ -1800,16 +1828,16 @@ a:hover {
   }
   .pic {
     display: none;
-}
-.pic2 {
-  display: block;
-  margin: 0 auto;
-}
+  }
+  .pic2 {
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 /*Tearsheets*/
 
-#outerDiv{
+#outerDiv {
   position: absolute;
   left: 0px;
   top: 240px;
@@ -1820,7 +1848,7 @@ a:hover {
   margin-bottom: 10rem;
 }
 
-#carousel{
+#carousel {
   position: absolute;
   height: 100%;
   width: 1710px;
@@ -1828,64 +1856,63 @@ a:hover {
   /* background: linear-gradient(#2fa4e7 40%, #255d7c); */
 }
 
-.designs{
-  position:relative;
+.designs {
+  position: relative;
   float: left;
   width: 150px;
   height: 90%;
   margin: 10px;
   margin-top: 25px;
 }
-.designs div{
-  
+.designs div {
   transition: width 0.25s, transform 0.25s;
 }
-.designs div:hover{
+.designs div:hover {
   width: 175px;
   transform: translateX(-10px);
 }
 
-.designs .image{
+.designs .image {
   position: absolute;
-  top:0px;
-  height:85%;
+  top: 0px;
+  height: 85%;
   width: 100%;
 }
-.designs .image img{
+.designs .image img {
   position: absolute;
   bottom: 0px;
   width: 100%;
   cursor: pointer;
 }
-.designs .text{
-  position:absolute;
-  color:black;
+.designs .text {
+  position: absolute;
+  color: black;
   text-transform: capitalize;
-  bottom:-30px;
+  bottom: -30px;
   height: 25%;
   width: 100%;
   text-align: center;
 }
 
-.footer p{
+.footer p {
   margin-bottom: 0 !important;
   font-size: 70%;
 }
 
 @media only screen and (max-width: 1224px) {
-  #outerDiv{
+  #outerDiv {
     height: 20rem;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  #outerDiv{
+  #outerDiv {
     height: 18rem;
   }
 }
 
 @media only screen and (max-width: 320px) {
-  #outerDiv{
+  #outerDiv {
     height: 16rem;
   }
 }
@@ -1901,95 +1928,87 @@ a:hover {
   font-weight: bold;
 }
 
-.work-img{
-  width: 37.5rem;
-  height: 28rem;
+.work-img {
+  width: 18rem;
+  height: 14rem;
 }
 
-.square-container{
-  width:37.5rem;
+.square-container {
+  width: 18rem;
   margin: 0 auto;
 }
 
-
 /* The fun begins */
-.square
-{
-  position:relative;
-  width:37.5rem;
-  height:28rem;
-  background:#dfedfc;
-  padding:10px;  
+.square {
+  position: relative;
+  width: 18rem;
+  height: 14rem;
+  background: #dfedfc;
+  padding: 10px;
   /* Assign the perspective to enable 3d Transform */
-  	perspective :600px;
-	-webkit-perspective: 600px;
-    -moz-perspective: 600px;
-  
+  perspective: 600px;
+  -webkit-perspective: 600px;
+  -moz-perspective: 600px;
 }
 
-.square .front
-{
-  position:absolute;
+.square .front {
+  position: absolute;
   top: 0;
   left: 0;
-  z-index:9;  
- 
+  z-index: 9;
+
   /* Assign The 3D Transform */
- -webkit-transform: rotateX(0deg) rotateY(0deg);
-    -webkit-transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-    -moz-transform: rotateX(0deg) rotateY(0deg);
-    -moz-transform-style: preserve-3d;
-    -moz-backface-visibility: hidden;
-    
+  -webkit-transform: rotateX(0deg) rotateY(0deg);
+  -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  -moz-transform: rotateX(0deg) rotateY(0deg);
+  -moz-transform-style: preserve-3d;
+  -moz-backface-visibility: hidden;
+
   /* Transition Effect */
-  transition: all .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
 }
 /* .flipping class for flip effect using jquery */
 
-.square.flipping .front
-{
-  z-index:9;
-  -webkit-transform:rotateX(180deg);
-  -moz-transform:rotateX(180deg);
+.square.flipping .front {
+  z-index: 9;
+  -webkit-transform: rotateX(180deg);
+  -moz-transform: rotateX(180deg);
 }
 
-
-.square .back
-{
-  position:absolute;
+.square .back {
+  position: absolute;
   top: 0;
   left: 0;
-  width:37.5rem;
-  height:28rem;
-  background:#dfedfc;
-  overflow:hidden;
-  text-align:center;
-  z-index:8;
-  
+  width: 37.5rem;
+  height: 28rem;
+  background: #dfedfc;
+  overflow: hidden;
+  text-align: center;
+  z-index: 8;
+
   /* Assign The 3D Transform */
-    -webkit-transform:rotateX(-180deg);
-    -webkit-transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-    -moz-transform:rotateX(-180deg);
-    -moz-transform-style: preserve-3d;
-    -moz-backface-visibility: hidden;
-  
+  -webkit-transform: rotateX(-180deg);
+  -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  -moz-transform: rotateX(-180deg);
+  -moz-transform-style: preserve-3d;
+  -moz-backface-visibility: hidden;
+
   /* Transition Effect */
-  transition:all .2s ease-in-out;
-  -webkit-transition:all .2s ease-in-out;
-  -moz-transition:all .2s ease-in-out;
-  -o-transition:all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
 }
 
-.square.flipping .back
-{
-  z-index:10;
+.square.flipping .back {
+  z-index: 10;
   -webkit-transform: rotateX(0deg) rotateY(0deg);
-	-moz-transform:rotateX(0deg) rotateY(0deg);
+  -moz-transform: rotateX(0deg) rotateY(0deg);
 }
 
 /*Activities*/
@@ -2008,28 +2027,28 @@ a:hover {
 }
 
 .btn-light-blue {
-  background-color: #0098D4 !important;
+  background-color: #0098d4 !important;
   color: white;
   border-radius: 5%;
 }
 
 .btn-light-blue:hover {
   background-color: white !important;
-  color: #0098D4;
-  border: 1px solid #0098D4;
+  color: #0098d4;
+  border: 1px solid #0098d4;
   border-radius: 5%;
 }
 
 .btn-orange {
-  background-color: #EE7C0E  !important;
+  background-color: #ee7c0e !important;
   color: white;
   border-radius: 5%;
 }
 
 .btn-orange:hover {
   background-color: white !important;
-  color: #EE7C0E ;
-  border: 1px solid #EE7C0E ;
+  color: #ee7c0e;
+  border: 1px solid #ee7c0e;
   border-radius: 5%;
 }
 
@@ -2067,25 +2086,24 @@ a:hover {
   top: 0;
   left: 400px;
   z-index: -60;
-  width:100%
+  width: 100%;
 }
- 
+
 .container-exh li img {
   position: absolute;
   top: 0;
   left: 1150px;
   z-index: -50;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 .nav-exh {
   width: 170px;
   height: auto;
   margin-bottom: 250px;
-/*   background: #fff; */
+  /*   background: #fff; */
 }
 
- 
 .ul-exh {
   width: 400px;
   height: auto;
@@ -2093,42 +2111,43 @@ a:hover {
   padding-top: 50px;
 }
 
-.li-exh{
-/*   display:flex;  */
-  position:relative;}
+.li-exh {
+  /*   display:flex;  */
+  position: relative;
+}
 
 .li-exh a {
   display: block;
   padding-left: 20px;
-/*   width: 150px;
+  /*   width: 150px;
   height: 30px; */
   margin: 15px 0;
-/*   background: white; */
+  /*   background: white; */
   color: black;
   text-decoration: none;
 }
 
-.li-exh span{
-width:300px;
-top:50%; 
-transform:translatey(-50%);
-position:absolute;
-opacity:.5;
+.li-exh span {
+  width: 300px;
+  top: 50%;
+  transform: translatey(-50%);
+  position: absolute;
+  opacity: 0.5;
 }
- 
+
 /* li:nth-child(1) {
   padding-top: 50px;
 } */
 
-.li-exh a:hover > span{
-  opacity:1;
- 
-/*   background: #eee; */
-/*   border-bottom:1px solid red;
+.li-exh a:hover > span {
+  opacity: 1;
+
+  /*   background: #eee; */
+  /*   border-bottom:1px solid red;
   position:absolute;
   right:10px; */
 }
- 
+
 .li-exh a:hover + img {
   left: 500px;
   top: -70px;
