--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -11,7 +11,7 @@
     <div class="row">
       {% if exhibitions %} {% for exhibition in exhibitions %}
       <div class="row">
-        <div class="col-4-md mb-5">
+        <div class="col-md-4 mb-5">
           <div class="square-container">
             <div class="square">
               <div class="front">
