--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -9,7 +9,7 @@
         </div> -->
     <div class="row">
       {% if testimonials %} {% for testimonial in testimonials %}
-      <div class="col-4-md mb-5">
+      <div class="col-md-4 mb-5">
         <div class="square-container">
           <div class="square">
             <div class="front">
