--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -11,8 +11,8 @@
     <div class="row">
       {% if exhibitions %} {% for exhibition in exhibitions %}
       <div class="col-md-4 mb-5">
-        <div class="square-container">
-          <div class="square">
+        <div class="square-container square-container-exh">
+          <div class="square square-exh">
             <div class="front">
               <p class="p-3">
                 <span class="work-title">{{ exhibition.date }}</span
