--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1933,6 +1933,11 @@ a:hover {
   height: 14rem;
 }
 
+.work-img-exh {
+  width: 14rem;
+  height: 18rem;
+}
+
 .square-container {
   width: 18rem;
   margin: 0 auto;
