--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -21,7 +21,10 @@
               </p>
             </div>
             <div class="back">
-              <img class="work-img" src="{{ exhibition.photo_main.url }}" />
+              <img
+                class="work-img work-img-exh"
+                src="{{ exhibition.photo_main.url }}"
+              />
             </div>
           </div>
         </div>
