--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %} {% block content %}
-<script src="http://license.novelgames.com/games/game.js"></script>
 <ins
   class="novelgames_cloudgame"
   data-game-short-name="rockpaperscissors"
   data-language="en"
 ></ins>
-{% endblock %}
+{% endblock %} {% block extra_js %}<script src="http://license.novelgames.com/games/game.js"></script
+>{% endblock extra_js %}
