--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -9,14 +9,14 @@
         </div> -->
     <div class="row">
       {% if testimonials %} {% for testimonial in testimonials %}
-      <div class="col-md-4 mb-5">
+      <div class="col-lg-4 mb-5">
         <div class="square-container">
           <div class="square">
             <div class="front">
               <img class="work-img" src="{{ testimonial.photo_main.url }}" />
             </div>
             <div class="back">
-              <p class="p-3">
+              <p class="p-3 pt-5">
                 <span class="work-title"
                   >{{ testimonial.name }}-{{ testimonial.title }}</span
                 ><br />
