--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -8,8 +8,8 @@
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-    {% if works %} {% for work in works %} {% if not
-    forloop.counter|divisibleby:2 %}
+    {% if works %} {% if not forloop.counter|divisibleby:2 %} {% for work in
+    works %}
     <div class="row text-center post-container py-3">
       <div class="col-md-5 mb-3">
         <img src="{{ work.photo_main.url }}" alt="" class="mb-3 img-fluid" />
@@ -22,8 +22,8 @@
         </div>
       </div>
     </div>
-    {% endif %} {% endfor %} {% endif %} {% if works %} {% for work in works %}
-    {% if forloop.counter|divisibleby:2 %}
+    {% endfor %} {% endif %} {% endif %} {% if works %} {% if
+    forloop.counter|divisibleby:2 %} {% for work in works %}
     <div class="row text-center post-container py-3">
       <div class="col-md-7 mb-3">
         <div class="body">
@@ -36,7 +36,7 @@
         <img src="{{ work.photo_main.url }}" alt="" class="mb-3 img-fluid" />
       </div>
     </div>
-    {% endif %} {% endfor %} {% endif %}
+    {% endfor %} {% endif %} {% endif %}
   </div>
 </section>
 {% endblock %}
