--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -6,4 +6,4 @@
   data-language="en"
 ></ins>
 {% endblock %} {% block extra_js %}<script src="http://license.novelgames.com/games/game.js"></script
->{% endblock extra_js %}
+>{% endblock %}
