--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="col-md-7 mb-3">
         <div class="body">
-          <h5 class="card-title">{{ work.title }}{{ work.id }}</h5>
+          <h5 class="card-title red-title">{{ work.title }}</h5>
           <p class="card-text">{{ work.description }}</p>
           <!-- <a href="{{ work.id }}" class="btn btn-danger">Read More</a> -->
         </div>
@@ -27,7 +27,7 @@
     <div class="row text-center post-container py-3">
       <div class="col-md-7 mb-3">
         <div class="body">
-          <h5 class="card-title">{{ work.title }}</h5>
+          <h5 class="card-title red-title">{{ work.title }}</h5>
           <p class="card-text">{{ work.description }}</p>
           <!-- <a href="{{ work.id }}" class="btn btn-danger">Read More</a> -->
         </div>
