--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -14,7 +14,7 @@
         <div class="square-container square-container-exh">
           <div class="square square-exh">
             <div class="front">
-              <p class="p-3 pt-5">
+              <p class="py-5 px-3">
                 <span class="work-title">{{
                   exhibition.date | date: 'M d, Y'
                 }}</span
