--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -16,7 +16,7 @@
               <img class="work-img" src="{{ testimonial.photo_main.url }}" />
             </div>
             <div class="back">
-              <p class="p-3 pt-5">
+              <p class="py-5 px-3">
                 <span class="work-title"
                   >{{ testimonial.name }}-{{ testimonial.title }}</span
                 ><br />
