--- a/templates/recent_activities/activities.html
+++ b/templates/recent_activities/activities.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <!-- Photos -->
 <section id="activities" class="py-5">
-    <div class="container">
-        <!-- <div class="row text-center">
+  <div class="container">
+    <!-- <div class="row text-center">
             <div class="col-md-12">
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-        {% if activities %}
-            {% for activity in activities %}
-                 {% if activity.is_published %}
-                    <div class="row text-center py-3">
-                        <div class="col-md-5 mb-3">
-                            <img src="{{activity.photo_main.url}}" alt="" class="mb-3 img-fluid">
-                        </div>
-                        <div class="col-md-7 mb-3">
-                            <div class="body">
-                                <h5 class="card-title">{{ activity.title }}</h5>
-                                <p class="card-text justify">{{ activity.description }}</p>
-                                <a href="{{ activity.id }}" class="btn btn-light-blue">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        {% else %}
-        <div class="row text-center">
-            <div class="col-md-12">
-                <p>No Activities Available</p>
-            </div>
+    {% if activities %} {% for activity in activities %} {% if
+    activity.is_published %}
+    <div class="row text-center py-3">
+      <div class="col-md-5 mb-3">
+        <img
+          src="{{ activity.photo_main.url }}"
+          alt=""
+          class="mb-3 img-fluid"
+        />
+      </div>
+      <div class="col-md-7 mb-3">
+        <div class="body">
+          <h5 class="card-title light-blue-title">{{ activity.title }}</h5>
+          <p class="card-text justify">{{ activity.description }}</p>
+          <a href="{{ activity.id }}" class="btn btn-light-blue">Read More</a>
         </div>
-        {% endif %}
+      </div>
     </div>
+    {% endif %} {% endfor %} {% else %}
+    <div class="row text-center">
+      <div class="col-md-12">
+        <p>No Activities Available</p>
+      </div>
+    </div>
+    {% endif %}
+  </div>
 </section>
 {% endblock %}
