--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1768,7 +1768,7 @@ a:hover {
   height: 28rem;
   width: 8000px;
   transform: translate3d(0, 0, 0);
-  background: url(../images/panoramic.png);
+  background: url(../images/main-pano.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
