--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %} {% block content %}
-<ins
-  class="novelgames_cloudgame"
-  data-game-short-name="rockpaperscissors"
-  data-language="en"
-></ins>
-{% endblock %} {% block extra_js %}<script src="http://license.novelgames.com/games/game.js"></script
->{% endblock %}
+<a href="https://cdn.htmlgames.com/DailyKaodoku/" target="_blank"
+  ><img src="https://cdn.htmlgames.com/DailyKaodoku/img/icon/image-300x200.jpg"
+/></a>
+{% endblock %}
