--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %} {% block content %}
-<a href="https://cdn.htmlgames.com/DailyKaodoku/" target="_blank"
-  ><img src="https://cdn.htmlgames.com/DailyKaodoku/img/icon/image-300x200.jpg"
-/></a>
+<div>
+  <script src="https://cdn.htmlgames.com/embed.js?game=DailyKaodoku&amp;&amp;bgcolor=white"></script>
+</div>
 {% endblock %}
