--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -15,9 +15,7 @@
           <div class="square square-exh">
             <div class="front">
               <p class="py-5 px-3">
-                <span class="work-title">{{
-                  exhibition.date | date: 'M d, Y'
-                }}</span
+                <span class="work-title">{{ exhibition.date }}</span
                 ><br />
                 {{ exhibition.title }}
               </p>
