--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %} {% block content %}
-<div>
+<div class="mb-3">
   <script src="https://cdn.htmlgames.com/embed.js?game=Go&amp;&amp;bgcolor=white"></script>
 </div>
 {% endblock %}
