--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -17,10 +17,10 @@
             </div>
             <div class="back">
               <p class="py-5 px-3">
-                <span class="work-title"
+                <span class="work-title grey-title"
                   >{{ testimonial.name }}-{{ testimonial.title }}</span
                 ><br />
-                {{ testimonial.description }}
+                {{ testimonial.testimonial }}
               </p>
             </div>
           </div>
