--- a/templates/recent_activities/activities.html
+++ b/templates/recent_activities/activities.html
@@ -21,6 +21,7 @@
         <div class="body">
           <h5 class="work-title light-blue-title">{{ activity.title }}</h5>
           <p class="card-text justify">{{ activity.description }}</p>
+          <a href="{{ activity.id }}" class="btn btn-light-blue">Read More</a>
         </div>
       </div>
     </div>
