--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -15,11 +15,7 @@
           <div class="square square-exh">
             <div class="front">
               <p class="py-5 px-3">
-                <span class="work-title pink-title">{{
-                  exhibition.date | date: 'Y'
-                }}</span
-                ><br />
-                {{ exhibition.title }}
+                <span class="work-title pink-title">{{exhibition.date | date:"Y"}}</br>{{exhibition.title}}</span>
               </p>
             </div>
             <div class="back">
