--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -14,7 +14,7 @@
         <div class="square-container square-container-exh">
           <div class="square square-exh">
             <div class="front">
-              <div class="container">
+              <div class="container py-3">
                 <span class="work-title"><h3 class="pink-title">{{exhibition.date | date:"Y"}}</h3></br>{{exhibition.title}}</span>
             </div>
             </div>
