--- a/templates/tearsheets/index.html
+++ b/templates/tearsheets/index.html
@@ -4,9 +4,7 @@
   {% for tearsheet in tearsheets %}
   <div
     class="carouselImage"
-    style="background:url({{
-      tearsheet.photo_main.url
-    }}); background-size:cover;"
+    style="background:url(http://placekitten.com/300/350); background-size:cover;"
   ></div>
   {% endfor %}
 </div>
