--- a/templates/tearsheets/index.html
+++ b/templates/tearsheets/index.html
@@ -1,11 +1,2 @@
 <!DOCTYPE html>
-{% extends 'base.html' %} {% load static %} {% block content %}
-<div class="carouselOfImages">
-  {% for tearsheet in tearsheets %}
-  <div
-    class="carouselImage"
-    style="background:url(http://placekitten.com/300/350); background-size:cover;"
-  ></div>
-  {% endfor %}
-</div>
-{% endblock %}
+{% extends 'base.html' %} {% load static %} {% block content %} {% endblock %}
