--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2205,3 +2205,83 @@ a:hover {
 .exh-line:hover {
   border-bottom: 2px solid #dfedfc;
 }
+
+/*Tearsheets*/
+
+.snip1511 {
+  font-family: 'Raleway', Arial, sans-serif;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin: 10px 1px;
+  min-width: 230px;
+  max-width: 245px;
+  width: 100%;
+  color: #ffffff;
+  text-align: right;
+  font-size: 16px;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  text-transform: uppercase;
+  box-shadow: none !important;
+}
+.snip1511:first-of-type {
+  margin-left: 10px;
+}
+.snip1511 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+.snip1511 .image {
+  padding: 15px 0;
+}
+.snip1511 img {
+  max-width: 100%;
+  backface-visibility: hidden;
+  vertical-align: top;
+  position: relative;
+  opacity: 0.7;
+}
+.snip1511 figcaption {
+  position: absolute;
+  left: 100%;
+  top: 0;
+  width: 100%;
+  background-color: #0d0d0d;
+  -webkit-transform: rotate(-90deg) translate(-100%, 0%);
+  transform: rotate(-90deg) translate(-100%, 0%);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
+  -webkit-transition-delay: 0;
+  transition-delay: 0;
+}
+.snip1511 h4 {
+  width: 100%;
+  margin: 0;
+  padding: 15px 20px;
+  line-height: 1.1em;
+  font-weight: 900;
+}
+.snip1511 a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.snip1511:hover img,
+.snip1511.hover img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  opacity: 1;
+}
+.snip1511:hover figcaption,
+.snip1511.hover figcaption {
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
+  -webkit-transform: rotate(-90deg) translate(-100%, -100%);
+  transform: rotate(-90deg) translate(-100%, -100%);
+}
