--- a/templates/tearsheets/index.html
+++ b/templates/tearsheets/index.html
@@ -3,14 +3,16 @@
 {% load static %}
 {% block content %}
 {% for tearsheet in tearsheets %}
-<figure class="snip1511">
-  <div class="image">
-    <img src="{{ tearsheet.photo_main.url }}" alt="{{ tearsheet.title }}" />
-  </div>
-  <figcaption>
-    <h4>{{ tearsheet.title }}</h4>
-  </figcaption>
-  <a href="#"></a>
-</figure>
+<div class="container text-center">
+  <figure class="snip1511 p-3">
+    <div class="image">
+      <img src="{{ tearsheet.photo_main.url }}" alt="{{ tearsheet.title }}" />
+    </div>
+    <figcaption>
+      <h4>{{ tearsheet.title }}</h4>
+    </figcaption>
+    <a href="#"></a>
+  </figure>
+</div>
 {% endfor %}
 {% endblock %}
