--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2206,82 +2206,77 @@ a:hover {
   border-bottom: 2px solid #dfedfc;
 }
 
-/*Tearsheets*/
+/*Exhibitions*/
 
-.snip1511 {
-  font-family: 'Raleway', Arial, sans-serif;
-  position: relative;
+#container {
+  width: 750px;
+  white-space: nowrap;
+  overflow-x: auto;
+  margin: 40px auto;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+
+#lijst {
+  min-width: 3000px;
+  padding: 0px;
+}
+
+.element {
+  display: inline-block;
+  padding: 40px;
+  background-color: #fff;
+  width: 100px;
+  margin: 0px 5px 20px 5px;
   float: left;
-  overflow: hidden;
-  margin: 10px 1px;
-  min-width: 230px;
-  max-width: 245px;
-  width: 100%;
-  color: #ffffff;
-  text-align: right;
-  font-size: 16px;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  text-transform: uppercase;
-  box-shadow: none !important;
+  white-space: normal !important;
 }
-.snip1511:first-of-type {
-  margin-left: 10px;
+
+.element ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
 }
-.snip1511 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
+  
+  .jaartal { padding: 5px;
+             font-size: 14pt;
+             font-weight: bold; 
+             border-bottom: 1px solid #000}
+
+  .ondertitel { font-size: 12pt; }
+
+button {
+  background-color: #000;
+  color: #fff;
+  padding: 20px;
+  border: 0px;
+  box-shadow: 0px;
+  font-size: 20px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
-.snip1511 .image {
-  padding: 15px 0;
+
+button:hover {
+  background-color: #eaeaea;
+  color: #000;
 }
-.snip1511 img {
-  max-width: 100%;
-  backface-visibility: hidden;
-  vertical-align: top;
-  position: relative;
-  opacity: 0.7;
+
+button:active {
+  background-color: #eaeaea;
+  color: #000;
+  outline: 0;
 }
-.snip1511 figcaption {
-  position: absolute;
-  left: 100%;
-  top: 0;
-  width: 100%;
-  background-color: #0d0d0d;
-  -webkit-transform: rotate(-90deg) translate(-100%, 0%);
-  transform: rotate(-90deg) translate(-100%, 0%);
-  -webkit-transform-origin: 0 0;
-  -ms-transform-origin: 0 0;
-  transform-origin: 0 0;
-  -webkit-transition-delay: 0;
-  transition-delay: 0;
+
+button:focus {
+  outline: 0;
 }
-.snip1511 h4 {
-  width: 100%;
-  margin: 0;
-  padding: 15px 20px;
-  line-height: 1.1em;
-  font-weight: 900;
-}
-.snip1511 a {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-.snip1511:hover img,
-.snip1511.hover img {
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
-  opacity: 1;
-}
-.snip1511:hover figcaption,
-.snip1511.hover figcaption {
-  -webkit-transition-delay: 0.15s;
-  transition-delay: 0.15s;
-  -webkit-transform: rotate(-90deg) translate(-100%, -100%);
-  transform: rotate(-90deg) translate(-100%, -100%);
+
+
+@media screen and (max-width: 500px) {
+  #container {
+    width: 90%;
+  }
+  
 }
