--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -20,12 +20,11 @@
         </li>
         {% endfor %}
       </ul>
-
-
+      <button id="later">
+        <</button> <button id="vroeger">>
+      </button>
     </div>
 
-    <button id="later"></button>
-    <button id="vroeger">></button>
     {% else %}
     <div class="row text-center">
       <div class="col-md-12">
