--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -20,11 +20,14 @@
         </li>
         {% endfor %}
       </ul>
+
+
+    </div>
+    <div class="text-center">
       <button id="later">
-        <</button> <button id="vroeger">>
+      </button> <button id="vroeger">
       </button>
     </div>
-
     {% else %}
     <div class="row text-center">
       <div class="col-md-12">
