--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2227,10 +2227,17 @@ a:hover {
   display: inline-block;
   padding: 40px;
   background-color: #fff;
-  min-width: 250px;
   margin: 0px 5px 20px 5px;
   float: left;
   white-space: normal !important;
+}
+
+.vertical {
+  width: 250px;
+}
+
+.horizontal {
+  width: 450px;
 }
 
 .element ul {
@@ -2280,3 +2287,4 @@ button:focus {
   }
   
 }
+
