--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2206,7 +2206,7 @@ a:hover {
   border-bottom: 2px solid #dfedfc;
 }
 
-/*Exhibitions*/
+/*Tearsheets and Exhibitions*/
 
 #container {
   width: 750px;
@@ -2280,6 +2280,35 @@ button:focus {
   outline: 0;
 }
 
+.vertical {
+  width: 250px;
+}
+
+.horizontal {
+  width: 350px;
+}
+
+.vertical-v {
+  transition: transform .2s; /* Animation */
+  width: 250px;
+}
+
+.vertical-v:hover {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.horizontal-h {
+  transition: transform .2s; /* Animation */
+  width: 350px;
+}
+
+.horizontal-h {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.j-yellow {
+  border-bottom: 1px solid #ffd300 ;
+}
 
 @media screen and (max-width: 500px) {
   #container {
