--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -30,8 +30,8 @@
 
     </div>
     <div class="text-center">
-      <button id="later">
-        <</button> <button id="vroeger">>
+      <button class="bg-pink" id="later">
+        <</button> <button class="bg-pink" id="vroeger">>
       </button>
     </div>
     {% else %}
