--- a/templates/tearsheets/index.html
+++ b/templates/tearsheets/index.html
@@ -29,8 +29,8 @@
 
     </div>
     <div class="text-center">
-      <button id="later">
-        <</button> <button id="vroeger">>
+      <button class="bg-yellow" id="later">
+        <</button> <button class="bg-yellow" id="vroeger">>
       </button>
     </div>
     {% else %}
