--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1712,6 +1712,14 @@ a:hover {
   color: #f3a9bb;
 }
 
+.bg-pink {
+  background: #f3a9bb;
+}
+
+.bg-yellow {
+  background: #ffd300;
+}
+
 @keyframes fadein {
   from {
     opacity: 0;
